# cg23-19-2

./: README.md
ImageEditor/: main.cpp
ImageEditor/application/: imageservice.cpp  imageservice.h
ImageEditor/domain/entities/: image.h
ImageEditor/infrastructure/factories/: imagesaverfactory.cpp
ImageEditor/infrastructure/loaders/: imageloader.cpp  p5imageloader.cpp  p6imageloader.h
ImageEditor/presentation/: imageeditor.cpp  imageeditor.h  imageeditor.ui
src/: CMakeLists.txt
src/application/: imageservice.cpp  imageservice.h
src/client/: imageconverter.h  imageloader.h
src/core/algorithms/: algorithm.h  scalealgorithm.cpp  scalealgorithm.h
src/core/domain/: image.cpp  image.h  pixel.h
src/domain/algorithms/: algorithm.h  brightnessautocorrectionalgorithm.cpp  brightnessautocorrectionalgorithm.h  channel1autocorrectionalgorithm.cpp  channel1autocorrectionalgorithm.h  converttogammaalgorithm.cpp  converttogammaalgorithm.h  createhistogramalgorithm.cpp  createhistogramalgorithm.h  drawhistogramalgorithm.cpp  drawhistogramalgorithm.h  drawlinealgorithm.cpp  drawlinealgorithm.h  scalealgorithm.cpp  scalealgorithm.h
src/domain/converters/: bytefloatconverter.cpp  bytefloatconverter.h  colorspaceconverter.cpp  colorspaceconverter.h
src/domain/converters/factories/: fromrgb_converterfactory.cpp  fromrgb_converterfactory.h  torgb_converterfactory.cpp  torgb_converterfactory.h
src/domain/converters/from_rgb/: fromrgb_converter.cpp  fromrgb_converter.h  tocmy_fromrgb_converter.cpp  tocmy_fromrgb_converter.h  tohsl_fromrgb_converter.cpp  tohsl_fromrgb_converter.h  tohsv_fromrgb_converter.cpp  tohsv_fromrgb_converter.h  torgb_fromrgb_converter.cpp  torgb_fromrgb_converter.h  toycbcr601_fromrgb_converter.cpp  toycbcr601_fromrgb_converter.h  toycbcr609_fromrgb_converter.cpp  toycbcr609_fromrgb_converter.h  toycbcr709_fromrgb_converter.cpp  toycbcr709_fromrgb_converter.h  toycocg_fromrgb_converter.cpp  toycocg_fromrgb_converter.h
src/domain/converters/to_rgb/: fromcmy_torgb_converter.cpp  fromcmy_torgb_converter.h  fromhsl_torgb_converter.cpp  fromhsl_torgb_converter.h  fromhsv_torgb_converter.cpp  fromhsv_torgb_converter.h  fromrgb_torgb_converter.cpp  fromrgb_torgb_converter.h  fromycbcr601_torgb_converter.cpp  fromycbcr601_torgb_converter.h  fromycbcr609_torgb_converter.cpp  fromycbcr609_torgb_converter.h  fromycbcr709_torgb_converter.cpp  fromycbcr709_torgb_converter.h  fromycocg_torgb_converter.cpp  fromycocg_torgb_converter.h  torgb_converter.cpp  torgb_converter.h
src/domain/dithering/: atkinsonditheringalgorithm.cpp  atkinsonditheringalgorithm.h  ditheringalgorithm.cpp  ditheringalgorithm.h  floydstainbergditheringalgorithm.cpp  floydstainbergditheringalgorithm.h  noditheringalgorithm.cpp  noditheringalgorithm.h  orderedditheringalgorithm.cpp  orderedditheringalgorithm.h  randomditheringalgorithm.cpp  randomditheringalgorithm.h
src/domain/entities/: bytepixel.cpp  bytepixel.h  floatpixel.cpp  floatpixel.h  image.cpp  image.h  pixel.cpp  pixel.h
src/domain/factories/: ditheringalgorithmfactory.cpp  ditheringalgorithmfactory.h
src/domain/filters/: boxblurfilter.cpp  boxblurfilter.h  cannyedgedetectorfilter.cpp  cannyedgedetectorfilter.h  contrastadaptivesharpeningfilter.cpp  contrastadaptivesharpeningfilter.h  gaussfilter.cpp  gaussfilter.h  imagefilter.cpp  imagefilter.h  medianfilter.cpp  medianfilter.h  otsuthresholdfilter.cpp  otsuthresholdfilter.h  sobelfilter.cpp  sobelfilter.h  thresholdfilter.cpp  thresholdfilter.h  unsharpmaskingfilter.cpp  unsharpmaskingfilter.h
src/domain/models/: colorspace.h  histogram.cpp  histogram.h  point.cpp  point.h
src/domain/scaling/: bcsplinealgorithm.cpp  bcsplinealgorithm.h  bilinearalgorithm.cpp  bilinearalgorithm.h  closestneighbouralgorithm.cpp  closestneighbouralgorithm.h  lanczos3algorithm.cpp  lanczos3algorithm.h  scalingalgorithm.cpp  scalingalgorithm.h
src/image_editor_core/: CMakeLists.txt
src/image_editor_core/algorithms/: algorithm.h  donothingalgorithm.cpp  donothingalgorithm.h
src/image_editor_core/domain/: image.cpp  image.h  pixel.cpp  pixel.h
src/image_editor_desktop/: CMakeLists.txt  mainwindow.ui
src/infrastructure/: imagerepository.cpp  imagerepository.h
src/infrastructure/factories/: imageloaderfactory.cpp  imageloaderfactory.h  imagesaverfactory.cpp  imagesaverfactory.h
src/infrastructure/loaders/: imageloader.cpp  imageloader.h  p5imageloader.cpp  p5imageloader.h  p6imageloader.cpp  p6imageloader.h  pngimageloader.cpp  pngimageloader.h
src/infrastructure/savers/: imagesaver.cpp  imagesaver.h  p5imagesaver.cpp  p5imagesaver.h  p6imagesaver.cpp  p6imagesaver.h  pngimagemonochromesaver.cpp  pngimagemonochromesaver.h  pngimagesaver.cpp  pngimagesaver.h
src/presentation/: imageconverter.cpp  imageconverter.h  imageeditor.cpp  imageeditor.h  imageeditor.ui  imageloader.h
src/presentation/converters/: imageconverter.cpp  imageconverter.h
src/presentation/dithering/: ditheringalgorithm.cpp  ditheringalgorithm.h  noditheringalgorithm.cpp
src/presentation/factories/: ditheringalgorithmfactory.cpp
src/presentation/models/: ditheringoptions.cpp  ditheringoptions.h  linedrawingoptions.cpp  linedrawingoptions.h
src/presentation/widgets/: bcsplineinputwidget.cpp  bcsplineinputwidget.h  bilinearinputwidget.cpp  bilinearinputwidget.h  boxblurinputwidget.cpp  boxblurinputwidget.h  cannyedgedetectorinputfilter.cpp  cannyedgedetectorinputfilter.h  contrastadaptivesharpeninginputwidget.cpp  contrastadaptivesharpeninginputwidget.h  gaussfilterinputwidget.cpp  gaussfilterinputwidget.h  lanczos3inputwidget.cpp  lanczos3inputwidget.h  medianfilterinputwidget.cpp  medianfilterinputwidget.h  nearestneighbourinputwidget.cpp  nearestneighbourinputwidget.h  otsuthresholdfilterinputwidget.cpp  otsuthresholdfilterinputwidget.h  sobelfilterinputwidget.cpp  sobelfilterinputwidget.h  thresholdfilterinputwidget.cpp  thresholdfilterinputwidget.h  unsharpmaskinginputwidget.cpp  unsharpmaskinginputwidget.h
tests/: CMakeLists.txt  tst_imageeditortests.cpp
(+3 files in other folders)
